practice3/k8s/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
